# 3es-core

./: .clang-format  .clang-tidy  .gitignore  3es.natvis  CMakeLists.txt  KnownIssues.md  LICENSE.txt  license.rtf  readme.md  todo.md  vcpkg-configuration.json  vcpkg.json
3escore/: AssertRange.h  BaseConnection.cpp  BaseConnection.h  Bounds.cpp  Bounds.h  ByteValue.cpp  ByteValue.h  CMakeLists.txt  CollatedPacket.cpp  CollatedPacket.h  CollatedPacketDecoder.cpp  CollatedPacketDecoder.h  Colour.cpp  Colour.h  CompressionLevel.h  Connection.h  ConnectionMonitor.h  CoordinateFrame.h  CoreConfig.in.h  CoreUtil.h  Crc.cpp  Crc.h  DataBuffer.cpp  DataBuffer.h  DataBuffer.inl  Debug.h  Endian.cpp  Endian.h  Enum.h  Exception.cpp  Exception.h  Feature.cpp  Feature.h  FileConnection.cpp  FileConnection.h  Finally.h  IntArg.h  Log.cpp  Log.h  Maths.cpp  (+57 more)
3escore/3esdoc/: 3esdocprotocol.md
3escore/cmake/: 3es-config.in.cmake  doxygen.cmake
3escore/private/: CollatedPacketZip.cpp  CollatedPacketZip.h  TcpConnection.h  TcpConnectionMonitor.cpp  TcpConnectionMonitor.h  TcpServer.cpp  TcpServer.h
3escore/qt/: TcpDetail.h
3escore/shapes/: Arrow.h  Box.h  Capsule.h  Cone.h  Cylinder.h  Id.h  MeshComponentFlag.h  MeshPlaceholder.cpp  MeshPlaceholder.h  MeshResource.cpp  MeshResource.h  MeshSet.cpp  MeshSet.h  MeshShape.cpp  MeshShape.h  MultiShape.cpp  MultiShape.h  MutableMesh.cpp  MutableMesh.h  Plane.h  PointCloud.cpp  PointCloud.h  Pose.h  QuatArg.h  Shape.cpp  Shape.h  Shapes.h  SimpleMesh.cpp  SimpleMesh.h  Sphere.h  Star.h  Text2D.cpp  Text2D.h  Text3D.cpp  Text3D.h
3escore/tcp/: TcpBase.cpp  TcpBase.h  TcpDetail.h  TcpSocket.cpp
3escore/tessellate/: Arrow.h  Box.h  Capsule.cpp  Capsule.h  Cone.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h
3esview/3esview/: BoundsCuller.cpp  BoundsCuller.h  CMakeLists.txt  Constants.h  DrawParams.h  EdlEffect.cpp  EdlEffect.h  FboEffect.h  FrameStamp.h  FramesPerSecondWindow.cpp  FramesPerSecondWindow.h  Magnum.h  MagnumColour.h  MagnumV3.h  ThirdEyeScene.cpp  ThirdEyeScene.h  ViewConfig.in.h  ViewableWindow.h  Viewer.cpp  Viewer.h  ViewerLog.cpp  ViewerLog.h  sourcelist.cmake
3esview/3esview/3p/: cfgpath.h
3esview/3esview/camera/: Fly.h  (+4 more)
3esview/3rdEyeScene/: CMakeLists.txt  ClientConfig.in.h  UIViewer.cpp  UIViewer.h  resources.conf  sourcelist.cmake
cmake/: 3esConfigureInstall.cmake  3esInstall.in.cmake  3esPack.cmake  3esTarget.cmake  3esUtil.cmake
examples/3esOccupancy/: CMakeLists.txt  Occupancy.cpp  OccupancyMesh.cpp  OccupancyMesh.h
examples/3esSphereView/: CMakeLists.txt  SphereView.cpp
test/: CMakeLists.txt
test/3estBandwidth/: Bandwidth.cpp  CMakeLists.txt
test/3estPrimitiveServer/: CMakeLists.txt  PrimitiveServer.cpp
test/3estServer/: CMakeLists.txt  ServerTest.cpp
test/3estTessellate/: CMakeLists.txt  Tessellate.cpp
test/3estUnit/: TestCollate.cpp  TestCommon.cpp  TestCommon.h  TestCore.cpp  TestDataBuffer.cpp  TestShapes.cpp  TestStream.cpp
test/3estViewer/: CMakeLists.txt  TestLog.cpp  TestMain.cpp  TestSettings.cpp  TestShapes.cpp  TestUtil.cpp  TestViewer.cpp  TestViewer.h  TestViewerConfig.in.h
utils/: CMakeLists.txt
utils/3esinfo/: CMakeLists.txt  Info.cpp
utils/3esrec/: CMakeLists.txt  FrameDisplay.cpp  FrameDisplay.h  Rec.cpp
vcpkg/ports/: .gitattributes
(+167 files in other folders)
